# AnsysPyAEDT

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/scripts/: generate_magnetics_powder_toroids.py
.github/workflows/: ci.yml  generate-magnetics-powder-toroids.yml  import-kdm-catalog.yml
.superpowers/sdd/: task-11-report.md  task-9-report.md
catalog/: README.md
catalog/conductors/: insulation-round-wire.yaml  round-wire.yaml
catalog/cores/: fair-rite-ferrite.yaml  kdm-mpp.yaml  kdm-powder.yaml  magnetics-ferrite.yaml  magnetics-powder.yaml
compatibility/: aedt-matrix.yml
docs/adr/: 0001-modular-python-qt-architecture.md  0002-spreadsheet-only-material-ingestion.md  0003-read-only-imported-materials.md  0004-standalone-windows-and-single-aedt-target.md  0005-backend-independent-projects.md  0006-rms-project-current-and-peak-solver-excitation.md
docs/architecture/: README.md
docs/catalog/: fair-rite-ferrite-unresolved.md  kdm-deferred-families.md
docs/development/: ROADMAP.md  VALIDATION_PLAN.md  aedt-compatibility-testing.md  automation-mcp-femm.md  coordination.md  dc-bias-compatibility.md  material-records.md  maxwell2d-generation.md  maxwell3d-generation.md
docs/superpowers/plans/: 2026-07-13-foundation-compatibility-spike.md  2026-07-13-toroid-domain-and-catalogs.md  2026-07-14-fair-rite-ferrite-toroid-catalog-import.md  2026-07-14-geometry-and-live-preview.md  2026-07-14-magnetics-powder-toroid-catalog-import.md  2026-07-16-maxwell2d-dc-compat.md  2026-07-16-maxwell3d-mvp.md  2026-07-17-automation-mcp-femm.md  2026-07-17-material-records-pipeline.md  2026-07-18-material-import-templates.md  2026-07-19-material-studio-ui.md  2026-07-20-material-studio-spreadsheet-only.md  2026-07-23-material-studio-readonly-imported.md  2026-07-23-material-template-column-order.md  2026-07-23-streamlined-material-library.md  2026-07-24-m5a-live-validation-closeout.md  README.md
docs/superpowers/specs/: 2026-07-12-pyaedt-inductor-application-design.md  2026-07-14-fair-rite-ferrite-toroid-catalog-import-design.md  2026-07-14-magnetics-powder-toroid-catalog-import-design.md  2026-07-18-material-import-templates-design.md  (+5 more)
schemas/catalog/: conductor.v1.schema.json  core.v1.schema.json
schemas/project/: v1.schema.json  v2.schema.json  v3.schema.json  v4.schema.json
src/inductor_designer/: __init__.py
src/inductor_designer/ui/: main.py  (+6 more)
tests/architecture/: test_dependency_boundaries.py
tests/contract/: test_aedt_gateway_contract.py  test_femm_solver_contract.py  test_material_repository_contract.py  test_maxwell2d_exporter_contract.py  test_maxwell_exporter_contract.py
tests/fakes/: __init__.py  aedt_gateway.py  capability_repository.py  femm_module.py  femm_solver.py  material_repository.py  maxwell2d_app.py  maxwell2d_exporter.py  maxwell3d_app.py  maxwell_exporter.py
tests/fixtures/: project.v2.json  sample_geometry_project.inductor.json
tests/golden/: sample_geometry_manifest.json
tests/integration/: test_material_reproducibility.py  test_material_studio_exit.py  test_material_table_upload.py  test_mcp_session.py  test_project_round_trip.py  test_release_matrix.py
tests/property/: test_packing_properties.py
tests/ui/: test_generation_controller.py  test_material_source.py  test_material_studio_controller.py  test_material_studio_workflow.py  test_preview_smoke.py  test_qml_smoke.py
tests/unit/: test_package.py
tools/: __init__.py  aedt_spike.py  build_catalog.py  check_architecture.py  fair_rite_toroid_catalog.py  fair_rite_toroid_parser.py  femm_material_evidence.py  generate_conductors.py  generate_maxwell2d.py  generate_maxwell3d.py  prepare_material_handoff.py  reproduce_material.py  run_aedt_maxwell2d.ps1  run_aedt_maxwell3d.ps1  run_aedt_spike.ps1  run_m5a_material_validation.ps1  scrape_fair_rite_ferrite_toroids.py  scrape_kdm_mpp.py  scrape_kdm_powder_toroids.py  scrape_kdm_powder_toroids_guard.py
(+166 files in other folders)
