[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "pyaedt-inductor-designer"
dynamic = ["version"]
description = "Design inductors and generate Ansys Maxwell projects through PyAEDT."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "PyAEDT Inductor Designer contributors" }]
dependencies = [
  "jsonschema>=4.23,<5",
  "packaging>=24.2,<27",
  "platformdirs>=4.3,<5",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
ui = ["PySide6>=6.7,<7"]
aedt = ["pyaedt>=0.27,<2"]
femm = ["pyfemm>=0.1.3"]
mcp = ["mcp>=1.0,<2"]
dev = [
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "hypothesis>=6.100,<7",
  "types-jsonschema>=4.23,<5",
  "types-PyYAML>=6.0,<7",
  "mcp>=1.0,<2",
]

[project.scripts]
inductor-designer = "inductor_designer.ui.main:main"
inductor-designer-mcp = "inductor_designer.mcp_server.server:main"

[tool.hatch.version]
path = "src/inductor_designer/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/inductor_designer"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "aedt: requires a controlled licensed AEDT installation",
  "ui: requires the PySide6 UI extra",
  "femm: requires a local FEMM 4.2 installation",
]

[tool.coverage.run]
branch = true
source = ["inductor_designer"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "SIM"]

[tool.ruff.lint.per-file-ignores]
# PyAEDT objects are opaque duck-typed handles; Any is the honest type at the port boundary.
"src/inductor_designer/adapters/pyaedt/maxwell3d.py" = ["ANN401"]
"src/inductor_designer/adapters/pyaedt/maxwell2d.py" = ["ANN401"]
"src/inductor_designer/adapters/femm/solver.py" = ["ANN401"]
"tests/fakes/maxwell3d_app.py" = ["ANN401"]
"tests/fakes/maxwell2d_app.py" = ["ANN401"]
"tests/fakes/femm_module.py" = ["ANN401"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tools"]

[[tool.mypy.overrides]]
module = ["ansys.aedt.*", "PySide6.*", "femm"]
ignore_missing_imports = true
